[package]
name = "storage-server"
version.workspace = true
edition.workspace = true

# The lib (sessions/handles/wire) is no_std+alloc for the on-OS build;
# "std" covers host testing and the placeholder host binary.
[features]
default = ["std", "serde"]
std = ["cas/std"]
# Forwards `cas/serde` so the shared `cas::store::RefEdit` carried inside
# `Request::Apply` serializes over the wire (rev1§4.7 guarded batch).
serde = ["dep:serde", "dep:postcard", "cas/serde"]
# Derives `Arbitrary` on the wire message types for the structured
# (typed-input) fuzz target. Forwards `cas/fuzzing` so `RefEdit` is `Arbitrary`
# too. Never enabled in normal builds.
fuzzing = ["dep:arbitrary", "cas/fuzzing"]

[dependencies]
ipc  = { path = "../ipc" }
cas  = { path = "../cas", default-features = false }
serde = { version = "1", default-features = false, features = ["derive", "alloc"], optional = true }
postcard = { version = "1", default-features = false, features = ["alloc"], optional = true }
arbitrary = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
proptest = "1"
