[package]
name = "urt"
version.workspace = true
edition.workspace = true

[dependencies]
ipc = { path = "../ipc" }

# The verified free-list core: `Heap<N>` delegates its allocation arithmetic to
# `freelist::FreeList`. It is no_std with the same pinned vstd urt already
# carries, so this edge adds no new binary and no cross-build risk.
freelist = { path = "../freelist" }

# vstd is the *Verus* dependency (see doc/guidelines/verus.md):
# the `verus!{}` macro + ghost vocabulary for the rev2§4.7 host-chokepoint proofs of
# the cspace-slot bitmap free-list (`slots.rs`) and the tick→ns conversion
# (`time.rs::utc_ns_at` — totality + monotonicity). `default-features = false`
# ⇒ no_std, no alloc, so it rides into the alloc-free user binaries unchanged —
# and it arrives transitively via the `ipc` path-dep (which carries vstd
# too), so there is no userspace cross-build risk. In an
# ordinary build (host `cargo test` *and* the aarch64 userspace cross-build via
# kernel/build.rs) the `verus!{}` macro erases to plain Rust and vstd compiles to
# nothing load-bearing (`time`'s proof uses only ghost `vstd::arithmetic` lemmas).
# Pinned (=version) in lockstep with kcore/ipc: an upgrade is a deliberate PR.
# Same recipe as kcore/Cargo.toml + ipc/Cargo.toml.
vstd = { version = "=0.0.0-2026-05-31-0205", default-features = false }

[dev-dependencies]
proptest = "1"

# loom reaches the time-page seqlock's *library* code (the field atomics), so
# it must be a real dependency, not a dev-dep — but only when the seqlock model
# is being built (RUSTFLAGS="--cfg loom"). A normal/aarch64 build never pulls
# it. Constrained to 0.7 so an upgrade is a deliberate PR.
[target.'cfg(loom)'.dependencies]
loom = "0.7"

# shuttle is the same story as loom one stanza up (a cfg-gated real dependency,
# off the normal build), for the non-certifying seqlock breadth-smoke
# (RUSTFLAGS="--cfg shuttle"). Constrained to 0.7 so an upgrade is a deliberate PR.
[target.'cfg(shuttle)'.dependencies]
shuttle = "0.7"

# `cargo verus verify -p urt` targets this crate (the same flag kcore/ipc/scratchpad use).
[package.metadata.verus]
verify = true

# cfg(loom)/cfg(shuttle) are set by RUSTFLAGS="--cfg loom|shuttle" for the
# time-page seqlock models; cfg(verus_keep_ghost)/cfg(verus_only) by Verus
# during `cargo verus verify`. target_os="eunomia" is the custom
# aarch64-unknown-eunomia target gating the CNTVCT/spawn arms (alongside
# bare-metal "none"); unknown to a host/none toolchain. Teach plain cargo all
# are expected (same handling as ipc/kcore). `urt` carries no Kani harness, so
# nothing injects cfg(kani).
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(loom)", "cfg(shuttle)", "cfg(futex_neg_control)", "cfg(verus_keep_ghost)", "cfg(verus_only)", 'cfg(target_os, values("eunomia"))'] }
