# cargo-fuzz harnesses for the IPC wire codec (spec rev2§3.7).
# Standalone workspace (see the empty [workspace] table): own target dir, own
# profile. Run with: cargo +nightly fuzz run wire_decode
[package]
name = "ipc-fuzz"
version = "0.0.0"
publish = false
edition = "2021"
license = "0BSD"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
ipc = { path = "..", features = ["std", "fuzzing"] }

# Arithmetic on untrusted lengths must trap, not wrap; a length-driven
# allocation that survives because nothing panicked is still an OOM primitive.
# Keep both checks on, with debug info for readable crash traces.
[profile.release]
debug = true
debug-assertions = true
overflow-checks = true

[workspace]

[[bin]]
name = "wire_decode"
path = "fuzz_targets/wire_decode.rs"
test = false
doc = false
bench = false

# The session connect codecs (ConnectReq/GrantReply) — a distinct decoder family
# from the postcard wire body above; uses the default no_std API (no `fuzzing`
# feature needed for the codecs themselves).
[[bin]]
name = "connect_decode"
path = "fuzz_targets/connect_decode.rs"
test = false
doc = false
bench = false
