[package]
name = "coretests"
version = "0.0.0"
edition = "2024"
autotests = false
autobenches = false

# Built by kernel/build.rs (`build_user_test`) for aarch64-unknown-eunomia via
# build-std with the `test` crate, then run under QEMU (std-port 6.1, findings
# #19). Not a workspace member — an EL0 libtest binary, host builds make no sense.
# The [[test]] target compiles the *vendored* upstream coretests suite in place
# (its `mod X;` decls resolve against the vendored tests/ dir); the one cfg-gated
# `extern crate eunomia_sys;` in that file — plus the dependency below — forces the
# PAL↔seam bridge into the link so std's `__eunomia_*` externs resolve.
[workspace]

[lib]
path = "src/lib.rs"
test = false
bench = false
doc = false

[[test]]
name = "coretests"
path = "../../vendor/rust/library/coretests/tests/lib.rs"

[dependencies]
eunomia-sys = { path = "../../eunomia-sys" }

# The suite's own dev-deps (match vendor/rust/library/coretests/Cargo.toml); both
# are no_std with default features off, so they cross-build for the EL0 target.
[dev-dependencies]
rand = { version = "0.9.0", default-features = false }
rand_xorshift = { version = "0.4.0", default-features = false }

[profile.release]
panic = "abort"
opt-level = "s"
lto = true
# Strip: the shell loads the whole ELF into its heap on `run`, so a smaller image
# keeps headroom (the .bss heap reservation is memsz, not file bytes).
strip = true

[profile.dev]
panic = "abort"
