[package]
name = "init"
version = "0.1.0"
edition = "2021"
license = "0BSD"

# Built by kernel/build.rs for aarch64-unknown-none-softfloat; not a
# workspace member. The hello ELF path arrives via HELLO_ELF_PATH.
[workspace]

[dependencies]
ipc = { path = "../../ipc" }
loader = { path = "../../loader", default-features = false }
urt = { path = "../../urt" }

# Host tests for the startup-block builders + the RTC sanity
# rule (rev2§6 Baseline tier). Dev-only, so the aarch64 cross-build never pulls it.
[dev-dependencies]
proptest = "1"

[profile.release]
panic = "abort"
opt-level = "s"
lto = true

[profile.dev]
panic = "abort"
