[package]
name = "selftest"
version = "0.1.0"
edition = "2021"
license = "0BSD"

# Built by kernel/build.rs for aarch64-unknown-none-softfloat; not a
# workspace member. The bare-metal items are gated behind cfg(not(test)) so a
# host `cargo test` can drive the pure startup-block decoder (rev2§6 Baseline).
[workspace]

[dependencies]
ipc = { path = "../../ipc" }
urt = { path = "../../urt" }
# The unified startup-block codec (loader::startup), shared with the shell
# producer. no_std, host-buildable; default-features off keeps it pulling only
# elf + startup (no target_os-gated spawn).
loader = { path = "../../loader", default-features = false }

# Host tests for the startup-block decoder (rev2§6 Baseline tier).
# Dev-only, so the aarch64 cross-build never pulls it.
[dev-dependencies]
proptest = "1"

[profile.release]
panic = "abort"
opt-level = "s"
lto = true

[profile.dev]
panic = "abort"
