[package]
name = "stdfs"
version = "0.1.0"
edition = "2021"

# Built by kernel/build.rs for aarch64-unknown-eunomia via build-std; not a
# workspace member (host builds make no sense for an EL0 binary). The std-port
# Phase-4.1 fs GATE fixture (findings #13): a real std binary that exercises the
# `sys/fs/eunomia` client end to end against storaged — create/write/read/readdir/
# rename/remove/sync — and prints `STD4 PASS`. Kept separate from `stdsmoke` so the
# fs concerns (and the delegated storaged session grant) stay off the thread/lock
# fixture. It links the PAL↔seam bridge through eunomia-sys like every std binary.
[workspace]

[dependencies]
# Satisfies std's undefined `__eunomia_*` extern "Rust" symbols (the __rust_alloc
# pattern), including the new `__eunomia_fs_*` fs-client shims. `extern crate
# eunomia_sys;` in main.rs forces the rlib into the link.
eunomia-sys = { path = "../../eunomia-sys" }

[profile.release]
panic = "abort"
opt-level = "s"
lto = true
# strip the symbol table (the stdsmoke posture): the shell loads the whole ELF
# into its fixed 1 MiB heap, so a smaller on-disk image keeps comfortable headroom.
strip = true

[profile.dev]
panic = "abort"
