[package]
name = "stdio"
version = "0.1.0"
edition = "2021"

# Built by kernel/build.rs for aarch64-unknown-eunomia via build-std; not a
# workspace member (host builds make no sense for an EL0 binary). The std-port
# console GATE fixture: a real std binary whose
# stdout/stdin/stderr ride the userspace `user/console` channel (not the debug-log),
# exercising the `sys/stdio/eunomia` console arm end to end — read a line, echo it,
# write a stderr diagnostic — then prints `STD51 PASS`. Kept separate from `stdsmoke`
# so the console concern (and the shell's console-endpoint donation, which is confined
# to the `CONSOLE_CAPABLE` allowlist) stays off the thread/lock fixture. It links the
# PAL↔seam bridge through eunomia-sys like every std binary.
[workspace]

[dependencies]
# Satisfies std's undefined `__eunomia_*` extern "Rust" symbols (the __rust_alloc
# pattern), including the `__eunomia_std{out,err}_write`/`__eunomia_stdin_read` console
# shims. `extern crate eunomia_sys;` in main.rs forces the rlib into the link.
eunomia-sys = { path = "../../eunomia-sys" }

[profile.release]
panic = "abort"
opt-level = "s"
lto = true
# strip the symbol table (the stdsmoke posture): the shell loads the whole ELF
# into its fixed 1 MiB heap, so a smaller on-disk image keeps comfortable headroom.
strip = true

[profile.dev]
panic = "abort"
