[package]
name = "stdsmoke"
version = "0.1.0"
edition = "2021"
license = "0BSD"

# Built by kernel/build.rs for aarch64-unknown-eunomia via build-std; not a
# workspace member (host builds make no sense for an EL0 binary). The first
# *std* user binary — the std runtime GATE fixture, not the
# real `hello` (which is its own std program). It links the PAL↔seam
# bridge through eunomia-sys so the live std stack runs end to end in QEMU.
[workspace]

[dependencies]
# Satisfies std's undefined `__eunomia_*` extern "Rust" symbols (the __rust_alloc
# pattern). `extern crate eunomia_sys;` in main.rs forces the rlib into the link
# so the linker pulls in the #[no_mangle] definitions in eunomia-sys/src/pal.rs.
eunomia-sys = { path = "../../eunomia-sys" }

[profile.release]
panic = "abort"
opt-level = "s"
lto = true
# strip the symbol table (deviation vs hello/selftest): the shell loads the whole
# ELF into its fixed 1 MiB heap, so a smaller on-disk image keeps comfortable
# headroom (the .bss heap reservation is memsz, not file bytes, so it does not
# inflate the image — only code/symbols do).
strip = true

[profile.dev]
panic = "abort"
